--- a/diensten/index.html
+++ b/diensten/index.html
@@ -1,76 +1,143 @@
 <!DOCTYPE html>
-<html lang="nl">
+<html lang="nl-BE">
 <head>
-<meta charset="utf-8"/>
-<meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Diensten — Buscemi Group</title>
-<meta name="description" content="Wat we aanbieden"/>
-<meta name="theme-color" content="#0e4d38"/>
-<link rel="preconnect" href="https://fonts.googleapis.com"/>
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet"/>
-<link rel="stylesheet" href="../style.css"/>
-<link rel="icon" type="image/png" href="../assets/favicon.png"/>
-<meta property="og:image" content="https://www.buscemigroup.be/assets/og-image.png"/>
-<meta property="og:title" content="Diensten — Buscemi Group"/>
-<meta property="og:description" content="Wat we aanbieden"/>
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="https://www.buscemigroup.be/diensten/index.html"/>
-<link rel="canonical" href="https://www.buscemigroup.be/diensten/index.html"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Diensten voor KMO’s | Buscemi Group</title>
+  <meta name="description" content="Overzicht van onze diensten voor KMO’s: Marketing en Consultancy. Duidelijke aanpak, meetbare KPI’s en praktische uitvoering." />
+  <link rel="canonical" href="https://www.buscemigroup.be/diensten/" />
+  <meta name="theme-color" content="#0d1425" />
+  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="/utilities.css" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Diensten voor KMO’s | Buscemi Group" />
+  <meta property="og:description" content="Marketing en Consultancy voor KMO’s. Heldere aanpak en meetbaar resultaat." />
+
+  <!-- JSON-LD: Breadcrumbs -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://www.buscemigroup.be/"},
+      {"@type":"ListItem","position":2,"name":"Diensten","item":"https://www.buscemigroup.be/diensten/"}
+    ]
+  }
+  </script>
 </head>
 <body>
+  <a class="visually-hidden skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-<header>
-  <div class="container nav">
-    <a class="brand" href="../index.html"><img src="../assets/logo.png" alt="Buscemi Group"/></a>
-    <nav class="nav-links" aria-label="Hoofdnavigatie">
-      <a href="../over.html">Over</a>
-      <div class="dropdown">
-        <a href="../diensten/index.html">Diensten ▾</a>
-        <div class="dropdown-content" role="menu">
-          <a href="../diensten/marketing.html">Marketing</a>
-          <a href="../diensten/consultancy.html">Consultancy</a>
+  <header class="site-header">
+    <div class="container nav">
+      <a class="brand" href="/" aria-label="Buscemi Group home">
+        <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" />
+      </a>
+      <a class="btn primary-cta" href="/#contact">Plan kennismaking</a>
+    </div>
+  </header>
+
+  <main id="main">
+    <!-- Breadcrumb -->
+    <nav class="container mt-12" aria-label="Breadcrumb">
+      <ol class="breadcrumb muted" style="display:flex;gap:8px;flex-wrap:wrap">
+        <li><a href="/">Home</a></li>
+        <li aria-hidden="true">/</li>
+        <li aria-current="page">Diensten</li>
+      </ol>
+    </nav>
+
+    <!-- HERO / Intro -->
+    <section class="hero container">
+      <div class="grid-2">
+        <div>
+          <h1>Diensten voor <span class="accent">ambitieuze KMO’s</span></h1>
+          <p>Heldere strategie, praktische uitvoering en meetbare KPI’s. Kies wat je nu het meest vooruit helpt — we stemmen de scope en snelheid af op je doelen.</p>
         </div>
       </div>
-      <a href="../insights/index.html">Insights</a>
-      <a href="../contact.html">Contact</a>
-    </nav>
-    <a class="btn" href="../contact.html">Plan kennismaking</a>
-    <button class="burger" aria-label="Menu" aria-expanded="false">☰</button>
-  </div>
-</header>
+    </section>
 
-<main class="container">
-  <section class="subpage-hero">
-    <h1>Diensten</h1>
-    <p class="sub">Twee pijlers die je bedrijf vooruithelpen.</p>
-  </section>
-  <div class="content" style="padding:32px 0">
-    <div class="grid-2">
-      <div class="card pad tile">
-        <h3>Marketing</h3>
-        <p>Socials, advertenties, branding en retail experience. Merkconsistentie met focus op performance.</p>
-        <p style="margin-top:12px"><a class="gold" href="marketing.html">Meer over Marketing →</a></p>
+    <!-- Tiles -->
+    <section class="container mt-10" aria-labelledby="diensten-lst">
+      <h2 id="diensten-lst" class="center">Waarmee we je helpen</h2>
+      <div class="grid-2 mt-24">
+        <article class="card pad tile">
+          <h3>Marketing</h3>
+          <p>Consistente branding, content en campagnes die presteren. Van planning tot rapportering.</p>
+          <ul class="muted" style="margin-top:8px">
+            <li>Content & social</li>
+            <li>Campagnes & advertenties</li>
+            <li>Rapportage & optimalisatie</li>
+          </ul>
+          <p class="mt-12"><a class="gold" href="/diensten/marketing.html">Ontdek Marketing →</a></p>
+        </article>
+
+        <article class="card pad tile">
+          <h3>Consultancy</h3>
+          <p>Kosten omlaag, processen strakker en doelen helder. Een plan dat je meteen kan uitvoeren.</p>
+          <ul class="muted" style="margin-top:8px">
+            <li>Kostenoptimalisatie</li>
+            <li>Procesverbetering</li>
+            <li>Roadmap & KPI’s</li>
+          </ul>
+          <p class="mt-12"><a class="gold" href="/diensten/consultancy.html">Ontdek Consultancy →</a></p>
+        </article>
       </div>
-      <div class="card pad tile">
-        <h3>Consultancy</h3>
-        <p>Kostenoptimalisatie, strategie en efficiëntie. Concreet plan met heldere rapportering.</p>
-        <p style="margin-top:12px"><a class="gold" href="consultancy.html">Meer over Consultancy →</a></p>
+    </section>
+
+    <!-- Werkwijze (kort) -->
+    <section class="container mt-20" aria-labelledby="werkwijze">
+      <h2 id="werkwijze" class="center">Onze werkwijze</h2>
+      <div class="grid-3 mt-24">
+        <div class="card pad tile"><h3>1. Analyse</h3><p>We bepalen je startpositie en doelen.</p></div>
+        <div class="card pad tile"><h3>2. Plan</h3><p>Roadmap met prioriteiten, budget en KPI’s.</p></div>
+        <div class="card pad tile"><h3>3. Uitvoering</h3><p>Implementatie, rapportage en bijsturing.</p></div>
       </div>
+    </section>
+
+    <!-- Mini-FAQ -->
+    <section class="container mt-20" aria-labelledby="faq">
+      <h2 id="faq" class="center">Veelgestelde vragen</h2>
+      <div class="grid-2 mt-12">
+        <div class="card pad">
+          <h3>Kunnen we klein starten?</h3>
+          <p>Ja. We starten vaak met een compacte quickscan of proefperiode, daarna schalen we op.</p>
+        </div>
+        <div class="card pad">
+          <h3>Wanneer zie ik resultaat?</h3>
+          <p>Meestal binnen 2–3 maanden; quick wins vaak sneller, afhankelijk van je startpositie.</p>
+        </div>
+        <div class="card pad">
+          <h3>Werken jullie met lange contracten?</h3>
+          <p>We werken met duidelijke milestones en evalueren per kwartaal — flexibel uitbreidbaar.</p>
+        </div>
+        <div class="card pad">
+          <h3>Hoe verloopt rapportering?</h3>
+          <p>Maandelijks met KPI’s, inzichten en concrete next steps, zodat je gericht kan bijsturen.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- CTA -->
+    <section class="container my-60">
+      <div class="cta center">
+        <p><strong>Wil je weten wat voor jouw KMO het meeste oplevert?</strong></p>
+        <a class="btn" href="/#contact">Plan kennismaking</a>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container flex justify-between items-center gap-12 flex-wrap">
+      <div>© <span id="year"></span> Buscemi Group</div>
+      <div class="muted"><a href="/legal.html">Privacy & Voorwaarden</a></div>
     </div>
-  </div>
-</main>
+  </footer>
 
-<footer>
-  <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap">
-    <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-    <div class="muted"><a href="../legal.html">Privacy</a> • <a href="../legal.html">Cookies</a> • <a href="../legal.html">Algemene voorwaarden</a></div>
-  </div>
-</footer>
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
-<script src="../cookie.js"></script>
-<script src="../nav.js"></script>
-
-<div class="sticky-cta"><a class="btn" href="../contact.html">Plan gesprek</a></div>
+  <script>
+    (function(){var y=document.getElementById("year");if(y)y.textContent=new Date().getFullYear();})();
+  </script>
 </body>
 </html>
