--- a/diensten/index.html
+++ b/diensten/index.html
@@ -12,15 +12,13 @@
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
 
   <!-- Styles -->
   <link rel="stylesheet" href="/style.css" />
-  <link rel="stylesheet" href="/utilities.css" />
 
   <!-- Icons & PWA -->
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-  <link rel="alternate icon" href="/favicon.ico" />
+  <link rel="icon" href="/assets/favicon.png" type="image/png" />
   <link rel="manifest" href="/site.webmanifest" />
 
   <!-- Open Graph / Twitter -->
@@ -30,51 +28,29 @@
   <meta property="og:title" content="Diensten voor KMO’s | Buscemi Group" />
   <meta property="og:description" content="Marketing en Consultancy voor KMO’s. Heldere aanpak en meetbaar resultaat." />
   <meta property="og:image" content="https://buscemigroup.be/assets/og-image.png" />
-  <meta property="og:locale" content="nl_BE" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Diensten voor KMO’s | Buscemi Group" />
-  <meta name="twitter:description" content="Marketing en Consultancy voor KMO’s. Heldere aanpak en meetbaar resultaat." />
-  <meta name="twitter:image" content="https://buscemigroup.be/assets/og-image.png" />
 
-  <!-- Breadcrumb structured data -->
-  <script type="application/ld+json">
-  {
-    "@context":"https://schema.org",
-    "@type":"BreadcrumbList",
-    "itemListElement":[
-      {"@type":"ListItem","position":1,"name":"Home","item":"https://buscemigroup.be/"},
-      {"@type":"ListItem","position":2,"name":"Diensten","item":"https://buscemigroup.be/diensten/"}
-    ]
-  }
-  </script>
-
-  <!-- Skip-link styling -->
   <style>
     .skip-link{position:absolute;left:-999px;top:auto;width:1px;height:1px;overflow:hidden}
     .skip-link:focus{left:1rem;top:1rem;width:auto;height:auto;padding:.5rem 1rem;z-index:1000;background:#fff;outline:2px solid currentColor}
+    .subpage-hero { background: var(--bg-soft); text-align: center; padding-top: clamp(3rem, 8vw, 5rem); padding-bottom: clamp(3rem, 8vw, 5rem); }
+    .faq-grid { display: grid; gap: 1.5rem; }
+    @media (min-width: 768px) { .faq-grid { grid-template-columns: 1fr 1fr; } }
+    .faq-card { padding: 1.5rem; }
+    .faq-card h3 { margin-bottom: 0.5rem; font-size: 1.1rem; }
   </style>
 </head>
 <body>
   <a class="skip-link" href="#main">Ga naar hoofdinhoud</a>
 
-  <!-- Header/nav -->
   <header class="site-header">
-    <div class="container nav">
+    <div class="container nav-container">
       <a class="brand" href="/">
         <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40" decoding="async" />
       </a>
-
-      <button class="burger"
-              data-nav-toggle
-              aria-label="Hoofdmenu"
-              aria-expanded="false"
-              aria-controls="site-menu">☰</button>
-
-      <nav id="site-menu"
-           class="nav-links"
-           data-nav-menu
-           aria-label="Hoofdnavigatie"
-           aria-hidden="true">
+      <button class="burger" data-nav-toggle aria-label="Hoofdmenu" aria-expanded="false" aria-controls="site-menu">
+        <span class="burger-line"></span><span class="burger-line"></span><span class="burger-line"></span>
+      </button>
+      <nav id="site-menu" class="nav-links" data-nav-menu aria-label="Hoofdnavigatie" aria-hidden="true">
         <ul class="menu">
           <li><a href="/over.html" data-nav-link>Over</a></li>
           <li>
@@ -90,122 +66,143 @@
           <li><a href="/contact.html" data-nav-link>Contact</a></li>
         </ul>
       </nav>
-
       <a class="btn primary-cta" href="/contact.html">Plan kennismaking</a>
     </div>
   </header>
 
   <main id="main">
-    <!-- Breadcrumb -->
-    <nav class="container mt-12" aria-label="Breadcrumb">
-      <ol class="breadcrumb muted" style="display:flex;gap:8px;flex-wrap:wrap">
-        <li><a href="/">Home</a></li>
-        <li aria-hidden="true">/</li>
-        <li aria-current="page">Diensten</li>
-      </ol>
-    </nav>
-
-    <!-- HERO -->
     <section class="subpage-hero">
       <div class="container">
-        <h1>Diensten voor <span class="accent">ambitieuze KMO’s</span></h1>
-        <p class="sub mx-auto max-w-760">Heldere strategie, praktische uitvoering en meetbare KPI’s. Kies wat je nu het meest vooruit helpt — we stemmen scope en tempo af op jouw doelen.</p>
+        <p class="kicker">Onze Diensten</p>
+        <h1>Marketing & Consultancy voor <span class="accent">ambitieuze KMO’s</span></h1>
+        <p class="sub mx-auto">Heldere strategie, praktische uitvoering en meetbare KPI’s. We stemmen scope en tempo af op uw doelen.</p>
       </div>
     </section>
 
-    <!-- Tiles -->
-    <section class="container mt-10" aria-labelledby="diensten-lst">
-      <h2 id="diensten-lst" class="center">Waarmee we je helpen</h2>
-      <div class="grid-2 mt-24">
-        <article class="card pad tile">
-          <h3>Marketing</h3>
-          <p>Consistente branding, content en campagnes die presteren. Van planning tot rapportering.</p>
-          <ul class="muted mt-8">
-            <li>Content & social</li>
-            <li>Campagnes & advertenties</li>
-            <li>Rapportage & optimalisatie</li>
-          </ul>
-          <p class="mt-12"><a class="gold" href="/diensten/marketing.html">Ontdek Marketing →</a></p>
-        </article>
-
-        <article class="card pad tile">
-          <h3>Consultancy</h3>
-          <p>Kosten omlaag, processen strakker en doelen helder. Een plan dat je meteen kan uitvoeren.</p>
-          <ul class="muted mt-8">
-            <li>Kostenoptimalisatie</li>
-            <li>Procesverbetering</li>
-            <li>Roadmap & KPI’s</li>
-          </ul>
-          <p class="mt-12"><a class="gold" href="/diensten/consultancy.html">Ontdek Consultancy →</a></p>
-        </article>
-      </div>
-    </section>
-
-    <!-- Werkwijze -->
-    <section class="container mt-20" aria-labelledby="werkwijze">
-      <h2 id="werkwijze" class="center">Onze werkwijze</h2>
-      <div class="grid-3 mt-24">
-        <div class="card pad tile"><h3>1. Analyse</h3><p>We bepalen je startpositie en doelen.</p></div>
-        <div class="card pad tile"><h3>2. Plan</h3><p>Roadmap met prioriteiten, budget en KPI’s.</p></div>
-        <div class="card pad tile"><h3>3. Uitvoering</h3><p>Implementatie, rapportage en bijsturing.</p></div>
-      </div>
-    </section>
-
-    <!-- FAQ -->
-    <section class="container mt-20" aria-labelledby="faq">
-      <h2 id="faq" class="center">Veelgestelde vragen</h2>
-      <div class="grid-2 mt-12">
-        <div class="card pad">
-          <h3>Kunnen we klein starten?</h3>
-          <p>Ja. We starten vaak met een compacte quickscan of proefperiode, daarna schalen we op.</p>
-        </div>
-        <div class="card pad">
-          <h3>Wanneer zie ik resultaat?</h3>
-          <p>Meestal binnen 2–3 maanden; quick wins vaak sneller, afhankelijk van je startpositie.</p>
-        </div>
-        <div class="card pad">
-          <h3>Werken jullie met lange contracten?</h3>
-          <p>We werken met duidelijke milestones en evalueren per kwartaal — flexibel uitbreidbaar.</p>
-        </div>
-        <div class="card pad">
-          <h3>Hoe verloopt rapportering?</h3>
-          <p>Maandelijks met KPI’s, inzichten en concrete next steps, zodat je gericht kan bijsturen.</p>
+    <section class="services-section fade-in-section">
+      <div class="container">
+        <div class="services-grid">
+          <a href="/diensten/marketing.html" class="card service-card">
+            <div class="service-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M12 12a5 5 0 1 0 0-10 5 5 0 0 0 0 10z"/><path d="M12 14c-2.76 0-5 2.24-5 5v2h10v-2c0-2.76-2.24-5-5-5z"/></svg>
+            </div>
+            <h3>Marketing</h3>
+            <p>Consistente branding, content en campagnes die presteren. Van planning tot rapportering.</p>
+            <span class="card-link">Ontdek Marketing</span>
+          </a>
+          <a href="/diensten/consultancy.html" class="card service-card">
+            <div class="service-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 14 4-4"/><path d="M16 14H8"/><path d="M20 18v-5a2 2 0 0 0-2-2H6a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2z"/></svg>
+            </div>
+            <h3>Consultancy</h3>
+            <p>Kosten omlaag, processen strakker en doelen helder. Een plan dat u meteen kan uitvoeren.</p>
+            <span class="card-link">Ontdek Consultancy</span>
+          </a>
         </div>
       </div>
     </section>
 
-    <!-- CTA -->
-    <section class="container my-60">
-      <div class="cta center">
-        <p><strong>Wil je weten wat voor jouw KMO het meeste oplevert?</strong></p>
-        <a class="btn" href="/contact.html">Plan kennismaking</a>
+    <section class="process-section fade-in-section">
+        <div class="container">
+            <div class="section-header">
+                <p class="kicker">Onze Werkwijze</p>
+                <h2>Een heldere aanpak in 3 stappen</h2>
+            </div>
+            <div class="process-grid">
+                <div class="card process-card">
+                    <div class="process-number">01</div>
+                    <h3>Analyse</h3>
+                    <p>Quickscan van cijfers, kanalen en processen. We bepalen duidelijke en haalbare doelstellingen.</p>
+                </div>
+                <div class="card process-card">
+                    <div class="process-number">02</div>
+                    <h3>Plan</h3>
+                    <p>Een concrete roadmap met prioriteiten, KPI’s en budget. Snel waarde leveren staat centraal.</p>
+                </div>
+                <div class="card process-card">
+                    <div class="process-number">03</div>
+                    <h3>Uitvoering</h3>
+                    <p>Implementatie, testing en continue optimalisatie. Altijd met heldere, bondige rapportering.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+    <section class="faq-section fade-in-section">
+        <div class="container">
+            <div class="section-header">
+                <p class="kicker">FAQ</p>
+                <h2>Veelgestelde vragen</h2>
+            </div>
+            <div class="faq-grid">
+                <div class="card faq-card">
+                    <h3>Kunnen we klein starten?</h3>
+                    <p>Ja. We starten vaak met een compacte quickscan of proefperiode, daarna schalen we op.</p>
+                </div>
+                <div class="card faq-card">
+                    <h3>Wanneer zie ik resultaat?</h3>
+                    <p>Meestal binnen 2–3 maanden; quick wins vaak sneller, afhankelijk van uw startpositie.</p>
+                </div>
+                <div class="card faq-card">
+                    <h3>Werken jullie met lange contracten?</h3>
+                    <p>We werken met duidelijke milestones en evalueren per kwartaal — flexibel en transparant.</p>
+                </div>
+                <div class="card faq-card">
+                    <h3>Hoe verloopt de rapportering?</h3>
+                    <p>Maandelijks met KPI’s, inzichten en concrete next steps, zodat u gericht kan bijsturen.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="cta-section fade-in-section">
+      <div class="container">
+        <div class="cta-card">
+          <h2>Wilt u weten wat voor uw KMO het meeste oplevert?</h2>
+          <p>Plan een vrijblijvend gesprek en ontdek de mogelijkheden.</p>
+          <a class="btn" href="/contact.html">Plan kennismaking</a>
+        </div>
       </div>
     </section>
   </main>
 
-  <footer class="site-footer">
-    <div class="container flex justify-between items-center gap-12 flex-wrap">
-      <div>© <span id="year"></span> Buscemi Group — Alle rechten voorbehouden</div>
-      <div class="muted">
-        <a href="/legal.html">Privacy</a> • <a href="/legal.html">Cookies</a> • <a href="/legal.html">Algemene voorwaarden</a>
+ <footer class="site-footer">
+      <div class="container footer-container">
+        <div class="footer-brand">
+          <img src="/assets/logo.png" alt="Buscemi Group" width="160" height="40">
+          <p>Marketing & Consultancy voor KMO's.</p>
+        </div>
+        <div class="footer-links">
+          <a href="/legal.html">Privacy</a>
+          <a href="/legal.html#cookies">Cookies</a>
+          <a href="/legal.html#voorwaarden">Voorwaarden</a>
+        </div>
+        <div class="footer-info">
+          <p>&copy; <span id="year"></span> Buscemi Group</p>
+          <p>BE 1027.136.562</p>
+        </div>
       </div>
-    </div>
-  </footer>
+    </footer>
 
-  <!-- Scripts -->
   <script src="/cookie.js" defer></script>
   <script src="/js/analytics.js" defer></script>
   <script src="/nav.js" defer></script>
-
-  <!-- Jaar in footer -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
-      var y = document.getElementById('year');
-      if (y) y.textContent = new Date().getFullYear();
+      const yearEl = document.getElementById('year');
+      if (yearEl) yearEl.textContent = new Date().getFullYear();
+      const sections = document.querySelectorAll('.fade-in-section');
+      const observer = new IntersectionObserver((entries) => {
+        entries.forEach(entry => {
+          if (entry.isIntersecting) {
+            entry.target.classList.add('is-visible');
+            observer.unobserve(entry.target);
+          }
+        });
+      }, { threshold: 0.1 });
+      sections.forEach(section => { observer.observe(section); });
     });
   </script>
-
-  <!-- No-JS fallback -->
-  <noscript><style>[data-nav-menu]{display:block!important}</style></noscript>
+  <noscript><style>.fade-in-section { opacity: 1; transform: none; } [data-nav-menu]{display:block!important}</style></noscript>
 </body>
 </html>
